--- a/player.html
+++ b/player.html
@@ -5,6 +5,7 @@
   </script>
 </head>
 <body>
+  TESTESTEST
   <cast-media-player></cast-media-player>
   <script>
     cast.framework.CastReceiverContext.getInstance().start();
