--- a/player.html
+++ b/player.html
@@ -6,7 +6,7 @@
   <style>
     #player {
         --theme-hue: 210;
-        --splash-image: url("my.png");
+        --splash-image: url("https://images.pexels.com/photos/8633/nature-tree-green-pine.jpg");
     }
   </style>
   <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js">
