--- a/player.html
+++ b/player.html
@@ -20,7 +20,7 @@ body, html {
 
 }
 .bgimg-1 {
-  background-image: url("img_parallax.jpg");
+  background-image: url("https://www.w3schools.com/howto/img_parallax.jpg");
   height: 100%;
 }
 
