--- a/player.html
+++ b/player.html
@@ -1,271 +1,59 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body,
-    html {
-      height: 100%;
-      margin: 0;
-      font: 400 15px/1.8 "Lato", sans-serif;
-      color: #777;
-    }
-    .bgimg-1,
-    .bgimg-2,
-    .bgimg-3 {
-      position: relative;
-      opacity: 0.65;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    .bgimg-1 {
-      /* background-image: url("background.jpg"); */
-      background-color: aliceblue;
-      height: 100%;
-      z-index: 10;
-    }
-    .board {
-      background-image: url("board.png");
-      max-height: 100%;
-    }
-    .caption {
-      position: absolute;
-      left: 0;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      color: #000;
-    }
-    .caption span.border {
-      background-color: #111;
-      color: #fff;
-      padding: 18px;
-      font-size: 25px;
-      letter-spacing: 10px;
-    }
-    h3 {
-      letter-spacing: 5px;
-      text-transform: uppercase;
-      font: 20px "Lato", sans-serif;
-      color: #111;
-    }
-    .flex-content {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .card-container {
-      position: relative;
-      z-index: 10;
-    }
-    .discarded-card-container {
-      position: relative;
-      z-index: 30;
-    }
-    .home {
-      width: 85px;
-      height: 132px;
-      background: url(cards.png);
-      position: absolute;
-      transition: 2s all;
-      background-color: transparent;
-    }
-  </style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+  font: 400 15px/1.8 "Lato", sans-serif;
+  color: #777;
+}
+.bgimg-1, .bgimg-2, .bgimg-3 {
+  position: relative;
+  opacity: 0.65;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.bgimg-1 {
+  background-image: url("https://www.w3schools.com/howto/img_parallax.jpg");
+  height: 100%;
+}
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px "Lato", sans-serif;
+  color: #111;
+}
+</style>
 </head>
-
 <body>
 
-
-  <div class="bgimg-1">
-
-    <div style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0,0,0,0.6);">
-      <div class="flex-content" style="width: 100%; height: 100%; text-align: center;">
-        <div id="imagesDiv">
-          <div id="yellowContainerTop" class="card-container"></div>
-          <div id="blueContainerTop" class="card-container"></div>
-          <div id="whiteContainerTop" class="card-container"></div>
-          <div id="greenContainerTop" class="card-container"></div>
-          <div id="redContainerTop" class="card-container"></div>
-          <img
-            style="max-height: 100%; max-width: 100%;position: relative; z-index: 20; box-sizing: border-box; padding: 30px;"
-            src="board.png">
-          <div id="yellowContainerDiscarded" class="discarded-card-container"></div>
-          <div id="blueContainerDiscarded" class="discarded-card-container"></div>
-          <div id="whiteContainerDiscarded" class="discarded-card-container"></div>
-          <div id="greenContainerDiscarded" class="discarded-card-container"></div>
-          <div id="redContainerDiscarded" class="discarded-card-container"></div>
-
-          <div id="yellowContainerBottom" class="card-container"></div>
-          <div id="blueContainerBottom" class="card-container"></div>
-          <div id="whiteContainerBottom" class="card-container"></div>
-          <div id="greenContainerBottom" class="card-container"></div>
-          <div id="redContainerBottom" class="card-container"></div>
-        </div>
-      </div>
-    </div>
+<div class="bgimg-1">
+  <div class="caption">
+    <span class="border">FULL PAGE</span><br>
+    <span class="border">BACKGROUND IMAGE</span>
   </div>
+</div>
 
-  <script>
-    function GetXPosition(card) {
-      if (card.CardType == 1) {
-        return (9 * 85) * -1;
-      }
-      else {
-        return ((card.Number - 2) * 85) * -1;
-      }
-    }
-    function GetYPosition(card) {
-      var postion = 0;
-      switch (card.ExpeditionType) {
-        case "yellow":
-          postion = 0;
-          break;
-        case "blue":
-          postion = 1;
-          break;
-        case "white":
-          postion = 2;
-          break;
-        case "green":
-          postion = 3;
-          break;
-        case "red":
-          postion = 4;
-          break;
-      }
-//TODO add cooficent for every image(-6 should be different for each other, -6 for green right now)
-      return ((postion * 131) * -1) - 6;
-    }
-    function GetCardLeftOffset(card) {
-      switch (card.ExpeditionType) {
-        case "yellow":
-          return 70;
-        case "blue":
-          return 185;
-        case "white":
-          return 310;
-        case "green":
-          return 435;
-        case "red":
-          return 560;
-      }
-    }
-    function GetCardContainerName(card) {
-      switch (card.ExpeditionType) {
-        case "yellow":
-          return "yellowContainer";
-        case "blue":
-          return "blueContainer";
-        case "white":
-          return "whiteContainer";
-        case "green":
-          return "greenContainer";
-        case "red":
-          return "redContainer";
-      }
-    }
-    function CreateCardDiv(position) {
-      var div = document.createElement("div");
-      div.className = "home";
-      div.style.left = 900 + 'px'
-      var top = 0;
-      switch (position) {
-        case 1:
-          top = -100;
-          break;
-        case -1:
-          top = 100;
-          break;
-        case 2:
-          top = 0;
-          break;
-      }
-      div.style.top = top + 'px';
-      return div;
-    }
-    function AddCardTo(card, position) {
-      var div = CreateCardDiv(position);
-      div.style.backgroundPosition = GetXPosition(card) + 'px' + ' ' + GetYPosition(card) + 'px';
-      var divToAddName = GetCardContainerName(card) + (position == 1 ? 'Top' : 'Bottom');
-      var divToAdd = document.getElementById(divToAddName);
-      var offset = divToAdd.childNodes.length * 2;
-      var topOffset = divToAdd.childNodes.length * 15;
-      div.style.zIndex = 13 - divToAdd.childNodes.length;
-      divToAdd.appendChild(div);
-      setTimeout(function () {
-        div.style.opacity = 1;
-      }, 100);
-      setTimeout(function () {
-        if (position == 1) {
-          div.style.top = -topOffset + 'px';
-        }
-        else {
-          div.style.top = -140 + topOffset + 'px';
-        }
-        div.style.left = GetCardLeftOffset(card) + offset + 'px';
-      })
-    }
-    function DiscardCard(card) {
-      var div = CreateCardDiv(-1);
-      var divToAdd = document.getElementById(GetCardContainerName(card) + 'Discarded');
-      div.style.zIndex = divToAdd.childNodes.length + 1;
-      div.style.backgroundPosition = GetXPosition(card) + 'px' + ' ' + GetYPosition(card) + 'px';
-      divToAdd.appendChild(div);
-      setTimeout(function () {
-        div.style.opacity = 1;
-      }, 100);
-      setTimeout(function () {
-        div.style.top = -190 + 'px';
-        div.style.left = GetCardLeftOffset(card) + 'px';
-      })
-    }
-    function PutCardOnTable(card, position) {
-      if (position == 0) {
-        DiscardCard(card);
-      }
-      else {
-        AddCardTo(card, position);
-      }
-    }
-    var number = 2;
-    var type = "yellow";
-    var isTop = 1;
-    setInterval(function () {
-      PutCardOnTable({
-        ExpeditionType: type,
-        CardType: 0,
-        Number: number
-      }, isTop);
-      number++;
-      if (number > 10) {
-        number = 2;
-        switch (type) {
-          case "yellow":
-            type = "blue";
-            break;
-          case "blue":
-            type = "white";
-            break;
-          case "white":
-            type = "green";
-            break;
-          case "green":
-            type = "red";
-            break;
-          case "red":
-            type = null;
-            break;
-        }
-      }
-      if (isTop == -1) {
-        isTop = 1;
-        return;
-      }
-      --isTop;
-    }, 3000);
-  </script>
+<p style="padding:5px 15px">This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
+
 </body>
-
 </html>
