--- a/player.html
+++ b/player.html
@@ -54,6 +54,9 @@ h3 {
 </div>
 
 <p style="padding:5px 15px">This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
-
+<script>
+  var context = cast.framework.CastReceiverContext.getInstance();
+var playerManager = context.getPlayerManager();
+context.start({ touchScreenOptimizedApp: true });</scropt>
 </body>
 </html>
